fixing movies logic